# agent-sight

./: .gitignore  README.md  SKILL.md  justfile  package.json  skills-lock.json
.agents/skills/agent-sight/: SKILL.md
.agents/skills/software-enginering/nextjs/: SKILL.md
.github/workflows/: docs-pages.yml  release.yml
.nexus/: config.json
.nexus/ai_harness/commands/: nexus-code.md  nexus-context-create.md  nexus-context-from-code.md  nexus-context-generate-red-tests.md  nexus-context-review.md  nexus-context-search.md  nexus-context-sync-from-chat.md  nexus-context-sync-with-code.md  nexus-context-update.md  nexus-context-validate-unstaged.md
.opencode/command/: browser-test.md
cli/: Cargo.toml
cli/src/: args.rs  logger.rs  main.rs  model.rs  output.rs
cli/src/claude/: history.rs
cli/src/opencode/: db.rs
docs/: next.config.mjs  package.json  tsconfig.json
docs/.source/: browser.ts  server.ts  source.config.mjs
docs/content/docs/: index.mdx  meta.json  overview.mdx  reference.mdx
docs/content/docs/getting-started/: commands.mdx  installation.mdx  meta.json
docs/src/app/: global.css  layout.tsx  page.tsx
docs/src/app/docs/[[...slug]]/: page.tsx
docs/src/components/: footer.tsx  install-command-block.tsx  logo.tsx  navbar.tsx
docs/src/lib/: layout.shared.tsx
justfiles/building/: build-docs.just
justfiles/development/: cli.just  dev.just  docs.just
justfiles/utilities/: pub-bump.just  pub.just  stats.just  view.just
scripts/: copy-native.js  postinstall.js  sync-version.js
skills/: SKILL.md
