[package]
name = "promsight_rs"
version = "0.1.5"
edition = "2024"

[[bin]]
name = "agent-sight"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "macros"] }
